fix(tabs): Hide scrollbar in firefox browser

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -31,6 +31,7 @@
   overflow: auto hidden;
   padding: 0px _token('tablist-padding');
   position: relative;
+  scrollbar-width: none;
 
   @each $alignment in (start, center, end) {
     &--align-#{$alignment} {
